--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                         <div class="carousel-inner">
                             <div
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp"
                                     class="d-block img-fluid  imagexxl col-12" alt="images" loading="lazy" />
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero2.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.webp"
                                     class="d-block img-fluid col-12" alt="images" loading="lazy" />
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.webp"
                                     class="d-block img-fluid col-12" alt="images" loading="lazy" />
                             </div>
                         </div>
@@ -188,14 +188,14 @@
                 <div class="col-12 p-0 about-main flex-wrap d-flex">
                     <div class="col-12  col-xxl-6 ">
                         <div class="About-img col-12">
-                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Where_Every_Drop_Counts.png"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Where_Every_Drop_Counts.webp"
                                 alt="images" class="col-12">
                         </div>
                     </div>
                     <div class=" d-flex  about-sab">
                         <div class="About-text d-flex">
                             <div class="bordericon d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle_58.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle_58.webp"
                                     alt="images" />
                             </div>
                             <p class="about-title m-0 ">About Us</p>
@@ -240,7 +240,7 @@
                     <div class="col-12 col-xl-6 d-flex flex-column benefit-text ">
                         <div class="About-text d-flex">
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
-                                <img src="assets/images/home/Rectangle 581.png" alt="images" />
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle_581.webp" alt="images" />
                             </div>
                             <div class="text-white text-us">
                                 <p class="d-md-none text-white mb-0 ">About us</p>
@@ -271,7 +271,7 @@
                                     <div class="benefit-main">
                                         <div class="benefit-pro">
                                             <div class="icon2 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.png"
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.webp"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
@@ -284,7 +284,7 @@
                                     <div class="benefit-main">
                                         <div class="benefit-pro">
                                             <div class="icon2 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.png"
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.webp"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
@@ -297,7 +297,7 @@
                                     <div class="benefit-main">
                                         <div class="benefit-pro ">
                                             <div class=" icon5 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).webp"
                                                     alt="images" />
                                             </div>
                                             <div class="icon-text icon-text1">
@@ -316,7 +316,7 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro">
                                     <div class="icon2 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.webp"
                                             alt="images" />
                                     </div>
                                     <div class="icon-text">
@@ -327,7 +327,7 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro">
                                     <div class="icon2 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.webp"
                                             alt="images" />
                                     </div>
                                     <div class="icon-text">
@@ -338,7 +338,7 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro ">
                                     <div class=" icon5 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png" alt="images" />
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).webp" alt="images" />
                                     </div>
                                     <div class="icon-text icon-text1">
                                         <h3 class="text-center m-0"> Engine <br> protection</h3>
@@ -365,7 +365,7 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="facility-img">
-                                    <img src="https://ik.imagekit.io/ecomax/assets/images/home/images.png" alt="images"
+                                    <img src="https://ik.imagekit.io/ecomax/assets/images/home/images.webp" alt="images"
                                         class="img-fluid ">
                                 </div>
                             </div>
@@ -416,7 +416,7 @@
                             <div class="swiper-slide   d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card ">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize1.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize1.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -428,7 +428,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize2.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize2.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -440,7 +440,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6 col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize3.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize3.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -452,7 +452,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize4.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize4.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -464,7 +464,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize5.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize5.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
@@ -475,7 +475,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize6.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize6.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -487,7 +487,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize7.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize7.webp"
                                             class="card-img-top" alt="images" />
                                     </div>
                                     <div
@@ -521,7 +521,7 @@
             <div class="row">
                 <div class="col-12 p-0 flex-wrap d-flex justify-content-center align-items-center">
                     <div class="col-12 col-xl-6 Fueling-Excellence-img">
-                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Fueling_Excellence.jpg" alt="images"
+                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Fueling_Excellence.webp" alt="images"
                             class="col-12">
                     </div>
                     <div class="col-12 col-xl-6 Fueling-Excellence-img2">
