--- a/index.html
+++ b/index.html
@@ -699,10 +699,10 @@
                                 <h4 class="mb-4 footer_heading">Quick Link</h4>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="/" class="link-light text-decoration-none">Home</a>
+                                        <a href="/" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="/collections/" class="link-light text-decoration-none text-success1">Automotive Products</a>
+                                        <a href="/collections/" class="link-light text-decoration-none ">Automotive Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="/industrial/" class="link-light text-decoration-none">Industrial Products</a>
