--- a/products/index.html
+++ b/products/index.html
@@ -77,9 +77,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-1 d-flex justify-content-center d-lg-none ">
-
-
+                    <div class="col-1 d-flex justify-content-center d-lg-none">
                         <div data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                             aria-controls="offcanvasScrolling">
                             <i class="fa-solid fa-bars-staggered"></i>
@@ -153,7 +151,7 @@
                 <div class="col-12 d-flex flex-wrap details p-0">
                     <div class="product-images">
                         <div class="swiper product_swiper2">
-                            <div class="swiper-wrapper   m-0 text-white" id="data-images">
+                            <div class="swiper-wrapper mt-0 m-0 text-white" id="data-images">
                              
                             </div>
                             <div class="swiper-button-next product_details_next  d-none d-md-block">
@@ -168,7 +166,7 @@
                             </div>
                           </div>
                           <div class="swiper product_swiper " >
-                            <div class=" swiper-wrapper mb-0 product-sab-images text-white imag-mini" id="data-images_mini" >
+                            <div class=" swiper-wrapper product_img mb-0 product-sab-images text-white imag-mini" id="data-images_mini" >
                              
                             </div>
                           </div>
