--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
                         <div class="carousel-inner">
                             <div
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp"
-                                    class="d-block img-fluid  imagexxl col-12" alt="images" loading="lazy" />
+                                <link rel="preload" as="image" href="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp">
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
