--- a/industrial/index.html
+++ b/industrial/index.html
@@ -117,9 +117,7 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                     </li>
-
                                     <li class="m-2">
                                         <a href="/about.html">ABOUT US </a>
                                     </li>
@@ -156,19 +154,19 @@
                     </div>
                     <div class="industrial-images ">
                         <div class="industrial-image">
-                            <img src="/assets/images/industrial/Industrial-city.png" alt="Industrial-city"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/industrial/Industrial-city.webp" alt="Industrial-city"
                                 class="img-fluid industrial-height">
                         </div>
                     </div>
                     <div class="industrial-images-circle industrial-height">
                         <div class="industrial-images-circle">
-                            <img src="/assets/images/industrial/Industrial-sip.png" alt="Industrial-city"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/industrial/Industrial-sip.webp" alt="Industrial-city"
                                 class="img-fluid industrial-height">
                         </div>
                     </div>
                     <div class="col-3 industrial-images industrial-height">
                         <div class="industrial-image">
-                            <img src="/assets/images/industrial/Industrial-plan.png" alt="Industrial-city"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/industrial/Industrial-plan.webp" alt="Industrial-city"
                                 class="img-fluid industrial-height">
                         </div>
                     </div>
@@ -177,7 +175,6 @@
         </div>
     </section>
     <!-- industrial hero End -->
-
     <!-- Ecomax Lubricants Start -->
     <section class="section-padding">
         <div class="container1">
