--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <div class="row">
                 <div class="col-12 p-0 flex-wrap d-flex justify-content-center align-items-center">
                     <div class="col-12 col-xl-6 Fueling-Excellence-img">
-                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Fueling_Excellence.webp" alt="images"
+                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Fueling_Excellence.jpg" alt="images"
                             class="col-12">
                     </div>
                     <div class="col-12 col-xl-6 Fueling-Excellence-img2">
