--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                         <div class="carousel-inner">
                             <div
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <link rel="preload" as="image" href="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp"
+                                class="d-block img-fluid col-12" alt="images" loading="lazy" />
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
