--- a/contactus.html
+++ b/contactus.html
@@ -195,11 +195,11 @@
   <section class="career_form_section section_padding">
     <div class="container1">
 
-      <div class="row m-0 col-12  align-items-center  p-0">
-        <div class="col-12  image_container col-md-5  ps-0 col-lg-5  d-flex justify-content-sm-center justify-content-lg-end  align-items-center ">
+      <div class="row m-0 col-12 align-items-center p-0">
+        <div class="col-12 image_container col-md-5  ps-0 col-lg-5 d-flex justify-content-sm-center justify-content-lg-end  align-items-center ">
           <div class="career-img-container">
             <img src="https://ik.imagekit.io/ecomax/assets/images/contact/contact_form.png" alt="oil-img"
-              class="img-fluid bg-dark h-100 col-12">
+              class="col-12">
           </div>
         </div>
 
@@ -381,7 +381,7 @@
                 </div>
               </div>
               <div class="col-12 d-none d-md-block col-sm-6 col-md-6 col-xl-5  mb-3 p-0 float-left  ">
-                <h2 class="mb-4 footer_heading ms-5">Connect with us</h2>
+                <h2 class="mb-4 footer_heading ms-5">Connect with us</h>
                 <ul class="list-group footer-hover ms-5">
                   <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a href="tel:+919998035620"
                       class="link-light text-decoration-none"> <img class="me-3"
