--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
                     <div class="col-12 col-xl-6 d-flex flex-column benefit-text ">
                         <div class="d-flex">
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle588.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle_581.webp"
                                     alt="images" />
                             </div>
                             <p class=" text-white mb-0">Ecomax Product Features</p>
@@ -409,7 +409,7 @@
                 <div class="col-12 d-flex flex-wrap align-items-center p-0">
                     <div class=" col-12  col-md-6-demo Mukesh  col-xl-4-demo d-flex ">
                         <div class="Kalsaria-img">
-                            <img src="https://ik.imagekit.io/ecomax/assets/images/about_page/mr.png"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/about_page/mr.jpg"
                                 alt="MR. Mukesh Kalsaria" class="img-fluid">
                         </div>
                     </div>
