--- a/about.html
+++ b/about.html
@@ -409,7 +409,7 @@
                 <div class="col-12 d-flex flex-wrap align-items-center p-0">
                     <div class=" col-12  col-md-6-demo Mukesh  col-xl-4-demo d-flex ">
                         <div class="Kalsaria-img">
-                            <img src="https://ik.imagekit.io/ecomax/assets/images/about_page/mr.jpg"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/about_page/mr.png"
                                 alt="MR. Mukesh Kalsaria" class="img-fluid">
                         </div>
                     </div>
