--- a/about.html
+++ b/about.html
@@ -400,7 +400,7 @@
     <!-- numeric section End -->
     <!-- MR. Mukesh Kalsaria Start -->
 
-    <section class="Kalsaria contact-connect-section section_padding ">
+    <section class="Kalsaria section_padding ">
         <div class="kalsari1-img d-flex justify-content-end me-2">
             <img src="assets/images/about_page/Dots.png" alt="dots">
         </div>
