--- a/career.html
+++ b/career.html
@@ -198,7 +198,7 @@
                     class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-5  d-flex justify-content-center justify-content-sm-start ">
                     <div class="career-img-container">
                         <img src="https://ik.imagekit.io/ecomax/assets/images/career/Mask_group.png" alt="oil-img"
-                            class="img-fluid bg-dark h-100">
+                            class="img-fluid">
                     </div>
                 </div>
             </div>
