--- a/collections/index.html
+++ b/collections/index.html
@@ -434,7 +434,7 @@
                         <a href="${url}">
                             <div class="products-img">
                                 <img src="${img}"
-                                    alt="${title}" class="img-fluid col-12 product_img">
+                                    alt="images" class="img-fluid col-12 product_img">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
