--- a/industrial/index.html
+++ b/industrial/index.html
@@ -229,7 +229,7 @@
                         <div class="row text-wrap">
                             <div
                                 class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
-                                <h5 class="mb-4 footer_heading">Quick Link</h5>
+                                <h2 class="mb-4 footer_heading">Quick Link</h2>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="/" class="link-light text-decoration-none ">Home</a>
@@ -291,7 +291,7 @@
                             </div>
 
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-2 col-xl-3 p-0 mb-3 float-left  ">
-                                <h5 class="mb-4 footer_heading">Company</h5>
+                                <h2 class="mb-4 footer_heading">Company</h2>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2"><a
                                             href="/about.html" class="link-light text-decoration-none">About Us</a></li>
@@ -337,7 +337,7 @@
                                 </div>
                             </div>
                             <div class="col-12 d-none d-md-block col-sm-6 col-md-6 col-xl-5  mb-3 p-0 float-left  ">
-                                <h5 class="mb-4 footer_heading ms-5">Connect with us</h5>
+                                <h2 class="mb-4 footer_heading ms-5">Connect with us</h2>
                                 <ul class="list-group footer-hover ms-5">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a
                                             href="tel:+919998035620" class="link-light text-decoration-none"> <img
@@ -467,7 +467,7 @@ document.addEventListener("DOMContentLoaded", async () => {
                        <div class="products">
                         <a href="/industrial/products/index.html?s=${collection.collection_slug}">
                             <div class="products-img">
-                                <img src="/assets/images/collections/industrial/${collection.collection_slug}/${collection.collection_image}" alt="${collection.products[0].thumb_title}" class="img-fluid col-12 product_img">
+                                <img src="/assets/images/collections/industrial/${collection.collection_slug}/${collection.collection_image}" alt="images" class="img-fluid col-12 product_img">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
