--- a/industrial/index.html
+++ b/industrial/index.html
@@ -467,7 +467,7 @@ document.addEventListener("DOMContentLoaded", async () => {
                        <div class="products">
                         <a href="/industrial/products/index.html?s=${collection.collection_slug}">
                             <div class="products-img">
-                                <img src="/assets/images/collections/industrial/${collection.collection_slug}/${collection.collection_image}" alt="images" class="img-fluid col-12 product_img">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/collections/industrial/${collection.collection_slug}/${collection.collection_image}" alt="images" class="img-fluid col-12 product_img">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
