--- a/industrial/index.html
+++ b/industrial/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
     <a href="#top" aria-label="top">
@@ -471,10 +471,10 @@ document.addEventListener("DOMContentLoaded", async () => {
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
-                                    <h5 class="product-title">${collection.products[0].thumb_title}</h5>
-                                    <h5 class="products-icon">
+                                    <h2 class="product-title">${collection.products[0].thumb_title}</h2>
+                                    <h2 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
+                                    </h2>
                                 </div>
                             </div>
                         </a>
