--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -583,7 +583,7 @@
                     if ($(this).attr('data-image') !== undefined) {
                         // replace the images
                         $(this).html(
-                            `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].products_image}" class="img-fluid" alt="${collectionData.products[0].title}" />`
+                            `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].products_image}" class="img-fluid" alt="images" />`
                         );
                     }
                     if ($(this).attr('product-overview') !== undefined) {
@@ -601,7 +601,7 @@
                     if ($(this).attr('data-direction_image') !== undefined) {
                         // replace the direction image
                         $(this).html(
-                            `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].description_image}" class="img-fluid" alt="${collectionData.products[0].title}" />`
+                            `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].description_image}" class="img-fluid" alt="images" />`
                         );
                     }
                     if ($(this).attr('direction-for-storage-and-use-title') !== undefined) {
