--- a/products/index.html
+++ b/products/index.html
@@ -303,12 +303,12 @@
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
-                                                <h5>
+                                                <h2>
                                                     Max 4T 20W-40
-                                                </h5>
-                                                <span class="products-icon">
+                                                </h2>
+                                                <h2 class="products-icon">
                                                     <i class="fa-solid fa-arrow-right"></i>
-                                                </span>
+                                                </h2>
                                             </div>
                                         </div>
                                     </a>
@@ -323,12 +323,12 @@
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
-                                                <h5>
+                                                <h2>
                                                     Action 20W-40 4T
-                                                </h5>
-                                                <span class="products-icon">
+                                                </h2>
+                                                <h2 class="products-icon">
                                                     <i class="fa-solid fa-arrow-right"></i>
-                                                </span>
+                                                </h2>
                                             </div>
                                         </div>
                                     </a>
@@ -343,12 +343,12 @@
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
-                                                <h5>
+                                                <h2>
                                                     4T power plus 20W-40
-                                                </h5>
-                                                <span class="products-icon">
+                                                </h2>
+                                                <h2 class="products-icon">
                                                     <i class="fa-solid fa-arrow-right"></i>
-                                                </span>
+                                                </h2>
                                             </div>
                                         </div>
                                     </a>
@@ -364,12 +364,12 @@
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
-                                                <h5>
+                                                <h2>
                                                     Gold 4T 20W-40
-                                                </h5>
-                                                <span class="products-icon">
+                                                </h2>
+                                                <h2 class="products-icon">
                                                     <i class="fa-solid fa-arrow-right"></i>
-                                                </span>
+                                                </h2>
                                             </div>
                                         </div>
                                     </a>
@@ -384,12 +384,12 @@
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
-                                                <h5>
+                                                <h2>
                                                     Max 4T 20W-50
-                                                </h5>
-                                                <span class="products-icon">
+                                                </h2>
+                                                <h2 class="products-icon">
                                                     <i class="fa-solid fa-arrow-right"></i>
-                                                </span>
+                                                </h2>
                                             </div>
                                         </div>
                                     </a>
@@ -404,12 +404,12 @@
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
-                                                <h5>
+                                                <h2>
                                                     Max 4T 10W-30
-                                                </h5>
-                                                <span class="products-icon">
+                                                </h2>
+                                                <h2 class="products-icon">
                                                     <i class="fa-solid fa-arrow-right"></i>
-                                                </span>
+                                                </h2>
                                             </div>
                                         </div>
                                     </a>
@@ -682,7 +682,7 @@
                         <a href="${url}">
                             <div class="products-img"">
                                 <img src="${img}"
-                                    alt="${title}" class="img-fluid col-12">
+                                    alt="images" class="img-fluid col-12">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
