--- a/products/index.html
+++ b/products/index.html
@@ -753,7 +753,7 @@
                         document.getElementById('data-images').innerHTML = new_images;
 
                         let mini_images = newProducts.map((image) => {
-                            return  "<div class="+"swiper-slide product_mini"+"><img src="+" /assets/images/new_products/"+ image +" class=" +"img-fluid "+"/> </div>" 
+                            return  "<div class="+"swiper-slide product_mini"+"><img src="+" /assets/images/new_products/"+ image +" class=" +"img-fluid "+" alt="+"images"+"/> </div>" 
                         })
                         document.getElementById('data-images_mini').innerHTML = mini_images;
 
