--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
                         <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image"
-                                 class="footer-logo-image img-fluid "></a>
+                                 class="footer-logo-image img-fluid footer-logo"></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                             Companion </p>
                             <div class="d-flex footer-icon-set">
