eco max complit

--- a/industrial/index.html
+++ b/industrial/index.html
@@ -400,8 +400,8 @@
                                                     <img class="me-3 mt-1 addres"
                                                         src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"
                                                         alt="images">
-                                                    <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br>
-                                                        Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155
+                                                    <p class="text-light footer-add">Block No. E-37, Hindva Dreams,
+                                                        Dhoran Pardi Gaypagla Road, Kamrej, Surat, Gujarat-394155
                                                     </p>
                                                 </div>
 
