--- a/career.html
+++ b/career.html
@@ -182,14 +182,18 @@
                                     class="form-control w-100 field message_field"></textarea>
                             </div>
                         </div>
+                    
                         <div class="sparkle-button">
                             <div class="sparkle-button career-form-btn">
-                                <button class="btn2 d-flex align-items-center" type="submit">
-                                    <span class="about-btn d-flex align-items-center justify-content-center">
-                                        <i class="fa-solid fa-arrow-up-long"></i>
-                                    </span>
-                                    <span class="text">Submit</span>
-                                </button>
+                                <a href="javascript:">
+                                    <button class="btn3 Read_more_btn d-flex align-items-center" type="submit">
+                                        <span
+                                            class="about-btn Read_more_icon about-btn-2 d-flex align-items-center justify-content-center">
+                                            <i class=" Read_more_icon_color fa-solid fa-arrow-up-long"></i>
+                                        </span>
+                                        <span class="text Read_more_text">Submit</span>
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </form>
