--- a/index.html
+++ b/index.html
@@ -218,12 +218,15 @@
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button">
-                                <button class="btn2 d-flex align-items-center">
-                                    <span class="about-btn d-flex align-items-center justify-content-center">
-                                        <i class="fa-solid fa-arrow-up-long"></i>
-                                    </span>
-                                    <span class="text">Read More</span>
-                                </button>
+                                <a href="javascript:">
+                                    <button class="btn3 Read_more_btn d-flex align-items-center">
+                                        <span
+                                            class="about-btn Read_more_icon about-btn-2 d-flex align-items-center justify-content-center">
+                                            <i class=" Read_more_icon_color fa-solid fa-arrow-up-long"></i>
+                                        </span>
+                                        <span class="text Read_more_text">Read more</span>
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -378,16 +381,19 @@
                             business in a transparent, trustworthy
                             and safe manner through team work,
                             integrity and innovation.</p>
-                        <div class="swiper-button-next1 swiper-button-next1">
-                            <div class=" btn-facility">
-                                <button class="btn2 d-flex align-items-center">
-                                    <span class="about-btn  d-flex align-items-center justify-content-center">
-                                        <i class="fa-solid fa-arrow-up-long"></i>
-                                    </span>
-                                    <span class="text">Next Image</span>
-                                </button>
+                            <div class="sparkle-button">
+                                <div class="sparkle-button">
+                                    <a href="javascript:">
+                                        <button class="btn3 Read_more_btn d-flex align-items-center">
+                                            <span
+                                                class="about-btn Read_more_icon about-btn-2 d-flex align-items-center justify-content-center">
+                                                <i class=" Read_more_icon_color fa-solid fa-arrow-up-long"></i>
+                                            </span>
+                                            <span class="text Read_more_text">Next Image</span>
+                                        </button>
+                                    </a>
+                                </div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -499,18 +505,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="product_btn All_product product_btn_bak d-flex justify-content-center">
-                    <div class=" btn-facility">
+               
+                <div class="sparkle-button product_btn All_product product_btn_bak d-flex justify-content-center">
+                    <div class="sparkle-button btn-facility">
                         <a href="/collections/">
-                            <button class="btn2 d-flex align-items-center">
-                                <span class="about-btn d-flex align-items-center justify-content-center">
-                                    <i class="fa-solid fa-arrow-up-long"></i>
+                            <button class=" btn3 Read_more_btn d-flex align-items-center">
+                                <span
+                                    class="about-btn Read_more_icon about-btn-2 d-flex align-items-center justify-content-center">
+                                    <i class=" Read_more_icon_color fa-solid fa-arrow-up-long"></i>
                                 </span>
-                                <span class="text">View All</span>
+                                <span class="text Read_more_text">View All</span>
                             </button>
                         </a>
                     </div>
-                </div>
+             </div>
             </div>
         </div>
     </section>
